--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/pc.css">
+    <link rel="stylesheet" href="./css/pc.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <nav>
             <div class="nav">
                 <a href="" class="logo">
-                    <img src="../img/logo.png">
+                    <img src="./img/logo.png">
                 </a>
                 <div class="topM">
                     <div id="l1" class="menu-link">Microsoft 365</div>
@@ -25,7 +25,7 @@
                     <div class="menu-link">支援</div>
                 </div>
                 <div class="burger">
-                    <img src="../img/burger.png" alt="">
+                    <img src="./img/burger.png" alt="">
                 </div>
 
                 <div class="topR">
@@ -94,19 +94,19 @@
                         搜尋
                     </div>
                     <div class="search-img">
-                        <img src="../img/search-img.png" alt="">
+                        <img src="./img/search-img.png" alt="">
                     </div>
                     <div class="bb btn-login">
                         登入
                     </div>
                     <div class="login-img">
-                        <img src="../img/login-img.png" alt="">
+                        <img src="./img/login-img.png" alt="">
                     </div>
                     <div class="bb btn-shop">
                         購物車
                     </div>
                     <div class="shopping-img">
-                        <img src="../img/shopping-img.png" alt="">
+                        <img src="./img/shopping-img.png" alt="">
                     </div>
                 </div>
                 <div class="phone-all">
@@ -133,9 +133,9 @@
     <main>
         <div class="containerA">
             <picture>
-                <source media="(min-width:1084px)" srcset="../img/RE4ntGe.jpg">
-                <source media="(min-width:770px)" srcset="../img/RE4ntGe-1083.png">
-                <img src="../img/RE4ntGe-767.png" style="width:100%;">
+                <source media="(min-width:1084px)" srcset="./img/RE4ntGe.jpg">
+                <source media="(min-width:770px)" srcset="./img/RE4ntGe-1083.png">
+                <img src="./img/RE4ntGe-767.png" style="width:100%;">
             </picture>
             <div class="left">
                 <div class="link A">Surface Pro 7</div>
@@ -145,21 +145,21 @@
         </div>
         <div class="item">
             <div class="item- A">
-                <img src="../img/logo_2.png" alt="">
+                <img src="./img/logo_2.png" alt="">
                 <div class="word">選擇您的 <br>Microsoft 365</br></div>
             </div>
             <div class="item- B">
-                <img src="../img/logo_3.png" alt="">
+                <img src="./img/logo_3.png" alt="">
                 <div class="word">選購 Surface 裝置</div>
             </div>
             <div class="item- C">
-                <img src="../img/logo_4.png" alt="">
+                <img src="./img/logo_4.png" alt="">
                 <div class="word">選購 Windows 10</div>
             </div>
         </div>
         <div class="products">
             <div class="product- A">
-                <img src="../img/logo_5.png" alt="">
+                <img src="./img/logo_5.png" alt="">
                 <div class="big_word">
                     Surface Laptop 3
                 </div>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div class="product- B">
-                <img src="../img/logo_6.png" alt="">
+                <img src="./img/logo_6.png" alt="">
                 <div class="big_word">
                     全新 Surface Laptop Go
                 </div>
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <div class="product- C">
-                <img src="../img/logo_7.png" alt="">
+                <img src="./img/logo_7.png" alt="">
                 <div class="big_word">
                     Xbox Game Pass Ultimate
                 </div>
@@ -186,7 +186,7 @@
                 </div>
             </div>
             <div class="product- D">
-                <img src="../img/logo_8.png" alt="">
+                <img src="./img/logo_8.png" alt="">
                 <div class="big_word">
                     Microsoft Edge
                 </div>
@@ -197,9 +197,9 @@
         </div>
         <div class="containerB">
             <picture>
-                <source media="(min-width:1084px)" srcset="../img/RE3hFDE.png">
-                <source media="(min-width:768px)" srcset="../img/RE3hFDE-1083.png">
-                <img src="../img/RE3hFDE-767.png" style="width:100%;">
+                <source media="(min-width:1084px)" srcset="./img/RE3hFDE.png">
+                <source media="(min-width:768px)" srcset="./img/RE3hFDE-1083.png">
+                <img src="./img/RE3hFDE-767.png" style="width:100%;">
             </picture>
             <div class="left">
                 <div class="link A">Microsoft OneDrive</div>
@@ -212,7 +212,7 @@
         </div>
         <div class="productsB">
             <div class="product- A">
-                <img src="../img/footerA.png" alt="">
+                <img src="./img/footerA.png" alt="">
                 <div class="big_word">
                     適用於商務的 Surface
                 </div>
@@ -221,7 +221,7 @@
                 </div>
             </div>
             <div class="product- B">
-                <img src="../img/footerB.png" alt="">
+                <img src="./img/footerB.png" alt="">
                 <div class="big_word">
                     Microsoft 365 商務版
                 </div>
@@ -230,7 +230,7 @@
                 </div>
             </div>
             <div class="product- C">
-                <img src="../img/footerC.png" alt="">
+                <img src="./img/footerC.png" alt="">
                 <div class="big_word">
                     Microsoft Teams
                 </div>
@@ -239,7 +239,7 @@
                 </div>
             </div>
             <div class="product- D">
-                <img src="../img/footerD.png" alt="">
+                <img src="./img/footerD.png" alt="">
                 <div class="big_word">
                     Microsoft Viva 簡介
                 </div>
