--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         <div class="item">
             <div class="item- A">
                 <img src="./img/logo_2.png" alt="">
-                <div class="word">選擇您的 <br>Microsoft 365</br></div>
+                <div class="word">選擇您的Microsoft 365</div>
             </div>
             <div class="item- B">
                 <img src="./img/logo_3.png" alt="">
